--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,77 @@
-.App {
-  text-align: center;
+.input {
+  border: 1px solid #ddd;
+  border-radius: 1px;
+  font-size: 2.5rem;
+  height: 60px;
+  margin-right: 6px;
+  overflow-x: auto;
+  padding-right: 1rem;
+  padding-top: 10px;
+  text-align: right;
+  transition: all .2s ease-in-out;
+  width: 100%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.input:hover {
+  border: 1px solid #bbb;
+  -webkit-box-shadow: inset 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.buttons {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
 }
 
-.App-link {
-  color: #61dafb;
+.buttons .operators,
+.buttons .numbers {
+  display: flex;
+  flex: 1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.buttons button:hover {
+  -webkit-box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
+}
+
+.operators button {
+  background-color: #ddd;
+  border: 1px solid #bbb;
+  flex: 1 1 25%;
+}
+
+.operators button:hover {
+  background-color: #ddd;
+  border-color: #aaa;
+}
+
+.numbers button {
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  flex: 1 1 33%;
+  min-height: 54px;
+}
+
+.numbers button:hover {
+  background-color: #f1f1f1;
+  border-color: #bbb;
+}
+
+.leftPanel {
+  flex: 1 1 80%;
+}
+
+button.equal {
+  background-color: #4d90fe;
+  border: 1px solid #3079ED;
+  color: #FFF;
+  flex: 1 0 calc(20% - 10px);
+  margin-left: 8px;
+  transition: all .2s ease-in-out;
+  vertical-align: top;
+}
+
+.equal:hover {
+  background-color: #307CF9;
+  border-color: #1857BB;
 }
